# stickman

./: .gitignore  CMakeLists.txt  Chat_manager.cpp  Chat_manager.hpp  Client.cpp  SharedQueue.hpp  client.cpp  compileshader.sh  generic.cpp  generic.h  main.cpp  server.cpp  vertex.glsl
src/: Client.cpp  Server.cpp  Testman.cpp
src/aux/: Messenger.hpp  magic_enum.hpp
src/game/: Entity.cpp  Entity.hpp
src/net/: GameCommand.hpp  GamePacket.hpp  NetManager.cpp  NetManager.hpp  SharedQueue.hpp  TCPManager.cpp  TCPManager.hpp
src/physics/: Box.cpp  Box.hpp  ContactListener.cpp  ContactListener.hpp  Ground.cpp  Ground.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
src/render/: Renderer.cpp  Renderer.hpp
src/script/: compileshader.sh
src/shader/: vertex.glsl
